--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: python39
-entrypoint: entrypoint: uvicorn app.main:app --host 0.0.0.0 --port 8000
+entrypoint: uvicorn app.main:app --host 0.0.0.0 --port 8000
 
 handlers:
   - url: /.*
