--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,6 +31,7 @@ jobs:
             "universe_domain": "googleapis.com"
           }
         project_id: sunny-truth-444203-c0
+        export_default_credentials: true
         
     - name: Verify Authentication
       run: gcloud auth list
