--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
-    - name: Set Up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
       with:
-        service_account_key: |
+        credentials_json: |
           {
             "type": "service_account",
             "project_id": "sunny-truth-444203-c0",
@@ -30,13 +30,17 @@ jobs:
             "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/github-actions-deployer%40sunny-truth-444203-c0.iam.gserviceaccount.com",
             "universe_domain": "googleapis.com"
           }
+
+    - name: Set Up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v4
+      with:
         project_id: sunny-truth-444203-c0
-        export_default_credentials: true
-        
+        install_components: 'app-engine-python'
+
     - name: Verify Authentication
       run: |
         gcloud auth list
         gcloud config list account
-        
+
     - name: Deploy to Google App Engine
       run: gcloud app deploy --quiet
