--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,7 +50,29 @@ jobs:
       - name: Run Flake8 Linting
         run: flake8 . || true
 
-  # 3. Deploy to GCP App Engine
+    # 3. Testing (Pytest)
+  test:
+    runs-on: ubuntu-latest
+    needs: [format-check, lint]  # Ensures this job runs after format-check and lint
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set Up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest  
+          pip install pydantic
+          
+      - name: Run Pytest
+        run: pytest
+
+  # 4. Deploy to GCP App Engine
   deploy:
     runs-on: ubuntu-latest
 
